--- a/index.html
+++ b/index.html
@@ -4,19 +4,39 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="apple-touch-icon" sizes="57x57" href="./icons/favicon/apple-icon-57x57.png">
+   <link rel="apple-touch-icon" sizes="60x60" href="./icons/favicon//apple-icon-60x60.png">
+   <link rel="apple-touch-icon" sizes="72x72" href="./icons/favicon//apple-icon-72x72.png">
+   <link rel="apple-touch-icon" sizes="76x76" href="./icons/favicon//apple-icon-76x76.png">
+   <link rel="apple-touch-icon" sizes="114x114" href="./icons/favicon//apple-icon-114x114.png">
+   <link rel="apple-touch-icon" sizes="120x120" href="./icons/favicon//apple-icon-120x120.png">
+   <link rel="apple-touch-icon" sizes="144x144" href="./icons/favicon//apple-icon-144x144.png">
+   <link rel="apple-touch-icon" sizes="152x152" href="./icons/favicon//apple-icon-152x152.png">
+   <link rel="apple-touch-icon" sizes="180x180" href="./icons/favicon//apple-icon-180x180.png">
+   <link rel="icon" type="image/png" sizes="192x192"  href="./icons/favicon//android-icon-192x192.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon//favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="96x96" href="./icons/favicon//favicon-96x96.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon//favicon-16x16.png">
+   <link rel="manifest" href="./icons/favicon/manifest.json">
+   <meta name="msapplication-TileColor" content="#ffffff">
+   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+   <meta name="theme-color" content="#ffffff">
    <link rel="stylesheet" href="./src/style/style.css">
    <title>Погода в Вашем городе</title>
 </head>
 <body>
    <div class="main">
       <div class="main__container container">
-         <h1>Введите город и жмите 'Enter':</h1>
-         <input type="text" class="city" placeholder="Введите название Вашего города">
+         <form class="form__city">
+            <h1 class="form__title">Введите название Вашего города:</h1>
+            <input type="text" class="form__input" placeholder="Москва">
+            <button class="form__submit">Отправить</button>
+         </form> 
+      </div>
    </div>
    <div class="weather">
       <div class="weather__container container">
       </div>
-   </div>
    </div>
    <script src="script.js"></script>
 </body>
