Weather forecast v0.3 (added styles, icons and fixed errors - double forecast, wrong name, name of city)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       <div class="main__container container">
          <form class="form__city">
             <h1 class="form__title">Введите название Вашего города:</h1>
-            <input type="text" class="form__input" placeholder="Москва">
+            <div class="form__wrapper">
+               <input type="text" class="form__input" placeholder="Москва">
+            </div>
             <button class="form__submit">Отправить</button>
          </form> 
       </div>
@@ -38,6 +40,7 @@
       <div class="weather__container container">
       </div>
    </div>
-   <script src="script.js"></script>
+   
+   <script src="./js/script.js"></script>
 </body>
 </html>
