Weather forecast v1.0 (added local storage of choosed cities, style modifications)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <div class="main__container container">
          <form class="form__city">
             <h1 class="form__title">Введите название Вашего города:</h1>
+            <div class="form__info">
+               <span class="form__info-info"></span>
+               <p>Данный pet-project использует незащищенный http протокол нарочно, для корректной работы с API.</p>
+               <div class="form__info-delete"></div>
+            </div>
             <div class="form__wrapper">
                <input type="text" class="form__input" placeholder="Москва">
             </div>
